workloads/leuchtturm-io/vaultwarden/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: vaultwarden
  namespace: leuchtturm-io
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  labels:
    app.kubernetes.io/name: vaultwarden
    app.kubernetes.io/part-of: vaultwarden

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - vault.leuchtturm.io
      secretName: vault.leuchtturm.io-tls

  rules:
    - host: vault.leuchtturm.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: vaultwarden
                port:
                  name: http
